--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "publisher": "rvest",
-  "name": "vs-code-prettier-eslint",
+  "publisher": "thakyZ",
+  "name": "vs-code-prettier-eslint-nekoboinick",
   "displayName": "Prettier ESLint",
   "description": "A Visual Studio Extension to format JavaScript and Typescript code using prettier-eslint package",
   "license": "MIT",
-  "author": "Rebecca Vest <olserebe@hotmail.com>",
+  "author": "Neko Boi Nick <950594+thakyZ@users.noreply.github.com> (https://github.com/thakyz)",
+  "contributors": [
+    "Rebecca Vest <olserebe@hotmail.com>"
+  ],
   "icon": "icon.png",
   "keywords": [
     "eslint",
@@ -14,12 +17,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/idahogurl/vs-code-prettier-eslint"
+    "url": "https://github.com/thakyZ/vs-code-prettier-eslint"
   },
   "version": "6.0.0",
   "engines": {
     "vscode": "^1.63.0",
-    "node": "^16.13.0"
+    "node": ">=16.13.0"
   },
   "categories": [
     "Formatters"
@@ -62,34 +65,34 @@
     "contributors:generate": "all-contributors generate"
   },
   "devDependencies": {
-    "@auto-it/exec": "^10.42.2",
-    "@auto-it/first-time-contributor": "^10.42.2",
-    "@auto-it/released": "^10.42.2",
-    "@auto-it/upload-assets": "^10.42.2",
-    "@auto-it/vscode": "^10.42.2",
-    "@types/node": "^18.14.2",
-    "@vscode/test-electron": "^2.2.3",
-    "all-contributors-cli": "^6.24.0",
-    "auto": "^10.42.2",
-    "esbuild": "^0.16.14",
-    "eslint": "^8.52.0",
+    "@auto-it/exec": "^11.1.6",
+    "@auto-it/first-time-contributor": "^11.1.6",
+    "@auto-it/released": "^11.1.6",
+    "@auto-it/upload-assets": "^11.1.6",
+    "@auto-it/vscode": "^11.1.6",
+    "@types/node": "^20.12.7",
+    "@vscode/test-electron": "^2.3.9",
+    "all-contributors-cli": "^6.26.1",
+    "auto": "^11.1.6",
+    "esbuild": "^0.20.2",
+    "eslint": "^9.1.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.2.0",
-    "jest": "^29.3.1",
-    "jest-environment-node": "^29.3.1",
-    "ovsx": "^0.7.1",
-    "prettier": "^3.1.0",
-    "prettier-eslint": "^16.1.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "ovsx": "^0.9.1",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "vsce": "^2.15.0"
   },
   "dependencies": {
-    "find-up": "^6.3.0",
-    "ignore": "^5.2.4",
+    "find-up": "^7.0.0",
+    "ignore": "^5.3.1",
     "require-relative": "^0.8.7",
-    "synckit": "^0.8.6"
+    "synckit": "^0.9.0"
   },
   "contributes": {
     "configuration": {
@@ -108,9 +111,9 @@
     "yarn": true
   },
   "__metadata": {
-    "id": "d4b06bd6-36a0-469f-be55-c0a73413b688",
-    "publisherDisplayName": "Rebecca Vest",
-    "publisherId": "b95e678b-a11b-44b4-b281-6b521c2005bc",
+    "id": "e150ea06-edbf-4773-8acf-a25d62026fe4",
+    "publisherDisplayName": "thakyZ",
+    "publisherId": "51c80b53-3465-4db8-be32-4c015e91f570",
     "isPreReleaseVersion": false
   }
 }
